try to fix Datastore failure without MAVEN_OPTS